--- a/historico.html
+++ b/historico.html
@@ -18,14 +18,14 @@
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
-            <li><a href="index.html">Home</a></li><!--Início-->
-            <li><a href="historico.html">Histórico</a></li><!--Historico---->
-            <li><a href="#">Sair</a></li><!--Sair-->
+                <li><a href="index.html">Home</a></li><!--Início-->
+                <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico---->
+                <li><a href="registro.html">Registrar</a></li><!--Historico---->
+                <li><a href="#">Sair</a></li><!--Sair-->
         </ul>
     </nav>
-    <h1>Controle de Visitantes</h1>
-    <!--<a href="dashboard.html">Relatórios</a>-->
-    <button id="updateUsers" onclick="LerUsuarios()">Reload usuários</button>
+    <h1>Controle de Usuários</h1>
+    <button id="updateUsers" class="button-primary left-button" onclick="LerUsuarios()">Reload usuários</button>
     <table class="tabelaUsuarios">
         <thead>
             <tr>
