--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/solid.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
-    
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/drilldown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
     <title>Controle de Visitantes - Histórico</title>
@@ -18,12 +21,14 @@
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
-            <li><a href="index.html">Home</a></li><!--Início-->
-            <li><a href="historico.html">Histórico</a></li><!--Historico---->
-            <li><a href="#">Sair</a></li><!--Sair-->
+                <li><a href="index.html">Home</a></li><!--Início-->
+                <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico---->
+                <li><a href="registro.html">Registrar</a></li><!--Historico---->
+                <li><a href="#">Sair</a></li><!--Sair-->
         </ul>
     </nav>
-    <h1>Controle de Visitantes</h1>
-    <script type="text/javascript" src="js/index.js"></script>
+    <div id="pieChartVisitas"></div>
+    <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+    <script type="text/javascript" src="js/styles.js"></script>
 </body>
 </html>
