adds new column

--- a/historicoVisitas.html
+++ b/historicoVisitas.html
@@ -36,6 +36,7 @@
                     <th>Placa</th>
                     <th>Entrada</th>
                     <th>Saída</th>
+                    <th>Setor</th>
                     <th>Status</th>
                 </tr>
             </thead>
