--- a/dashboard.html
+++ b/dashboard.html
@@ -14,10 +14,10 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/drilldown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    
     <title>Controle de Visitantes - Histórico</title>
 </head>
 <body onload="checkAuth()" onunload="Logout()">
+<!--<body>-->
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
@@ -27,14 +27,11 @@
                 <li><a href="#">Sair</a></li><!--Sair-->
         </ul>
     </nav>
-<<<<<<< HEAD
+    <h1>Estatísticas</h1>
     <div id="pieChartVisitas"></div>
-    <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+    <div id="lineChartVisitasHora"></div>
+</body>
     <script type="text/javascript" src="js/styles.js"></script>
-=======
-    <h1>Controle de Visitantes</h1>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
->>>>>>> ab557fb52aff9c9432f6c35e572b4dc4c8934c35
-</body>
 </html>
