commit mudanças front e back

--- a/frontEnd/historicoVisitas.html
+++ b/frontEnd/historicoVisitas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,7 +26,6 @@
     </nav>
     <h1>Histórico de Visitantes</h1>
         <div class="center-them">
-            <button id="updateHistorico" class="button-primary left-button" onclick="updateUsers()">Reload Histórico</button>
             <a class="help" href="dashboard.html"><button id="dashboard" class="button-primary left-button">Dashboard</button></a>
         </div>
         <table class="tabelaHistorico">
