--- a/frontEnd/dashboard.html
+++ b/frontEnd/dashboard.html
@@ -14,10 +14,9 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/drilldown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>Controle de Visitantes - Histórico</title>
+    <title>Controle de Visitantes - Dashboard</title>
 </head>
-<!--<body onload="checkAuth()" onunload="Logout()">-->
-<body>
+<body onload="checkAuth()">
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
