Começado Registro de Visita

--- a/frontEnd/cadastropessoa.html
+++ b/frontEnd/cadastropessoa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,17 +36,17 @@
         </div>
         <div class="item">
             <h6>Sexo</h6>
-            <input type="radio" name="sexo" value="masculino" id="m"> Masculino
-            <input type="radio" name="sexo" value="feminino" id="f"> Feminino
-            <input type="radio" name="sexo" value="outro" id="o"> Outro
+            <input type="radio" name="sexo" value="M" id="m"> Masculino
+            <input type="radio" name="sexo" value="F" id="f"> Feminino
+            <input type="radio" name="sexo" value="O" id="o"> Outro
         </div>
         <div class="item">
                 <h6>Telefone</h6>
                 <input type="text" placeholder="(15) 9 9876-6789" id="telefone">
             </div>
-        <button class="button-primary" id="SaveCadastro" onclick="cadastrar()">Salvar</button>
+        <button class="button-primary" id="SaveCadastro" onclick="Cadastrar()">Salvar</button>
     </div>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/cadastrarVisita.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
