changes dropdown from index to cadastrousuario

--- a/frontEnd/cadastrousuario.html
+++ b/frontEnd/cadastrousuario.html
@@ -14,7 +14,8 @@
     
     <title>Controle de Visitantes - Histórico</title>
 </head>
-<body onload="checkAuth()">
+<!--<body onload="checkAuth()">-->
+<body>
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
@@ -38,6 +39,13 @@
     </table>
 
     <div class="form usuarios">
+        <div class="item" id="tipo">
+            <label for="tipoUsuario">Tipo</label>
+            <select id="tipoUsuario">
+                <option value="administrador">Administrador</option>
+                <option value="funcionario">Funcionário</option>
+            </select>
+        </div>
         <div class="item">
             <label for="username">Usuário</label>
             <input type="text" placeholder="Usuário" id="username">
