--- a/frontEnd/dashboard.html
+++ b/frontEnd/dashboard.html
@@ -16,7 +16,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>Controle de Visitantes - Dashboard</title>
 </head>
-<body onload="checkAuth()">
+
+<body>
+<!--<body onload="checkAuth()">-->
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
