--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -15,7 +15,8 @@
     
     <title>Controle de Visitantes - Entrar</title>
 </head>
-<body onload="Logout()">
+<!--<body onload="Logout()">-->
+<body>
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
@@ -27,13 +28,6 @@
     </nav>
     <h1>Controle de Visitantes</h1>
     <div class="form">
-        <div class="item" id="tipo">
-            <label for="tipoUsuario">Tipo</label>
-            <select id="tipoUsuario">
-                <option value="administrador">Administrador</option>
-                <option value="funcionario">Funcionário</option>
-            </select>
-        </div>
         <div class="item">
             <label for="username">Usuário</label>
             <input type="text" placeholder="Usuário" id="username">
