--- a/frontEnd/cadastropessoa.html
+++ b/frontEnd/cadastropessoa.html
@@ -18,11 +18,9 @@
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
-            
-                <li><a href="index.html">Home</a></li><!--Início-->
-                <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico---->
-                <li><a href="registro.html">Registrar</a></li><!--Historico---->
-                <li><a href="#">Sair</a></li><!--Sair-->
+            <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico-->
+            <li><a href="cadastrovisita.html">Registrar Visitante</a></li><!--Registro Visitante-->
+            <li><a href="index.html">Sair</a></li><!--Sair-->
         </ul>
     </nav>
     <h1>Cadastro</h1>
