--- a/frontEnd/cadastrovisita.html
+++ b/frontEnd/cadastrovisita.html
@@ -16,13 +16,12 @@
 </head>
 <body onload="checkAuth()">
         <nav>
-                <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
-                <ul class="links">
-                                <li><a href="index.html">Home</a></li><!--Início-->
-                                <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico---->
-                                <li><a href="registro.html">Registrar</a></li><!--Historico---->
-                                <li><a href="#">Sair</a></li><!--Sair-->
-                </ul>
+            <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
+            <ul class="links">
+                <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico-->
+                <li><a href="cadastrovisita.html">Registrar Visitante</a></li><!--Registro Visitante-->
+                <li><a href="index.html">Sair</a></li><!--Sair-->
+            </ul>
         </nav>
         <h1>Registro de Visita</h1>
         <div class="form">
