--- a/frontEnd/cadastropessoa.html
+++ b/frontEnd/cadastropessoa.html
@@ -14,7 +14,8 @@
     
     <title>Controle de Visitantes - Cadastro</title>
 </head>
-<body onload="checkAuth()">
+<!--<body onload="checkAuth()">-->
+<body>
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
