--- a/frontEnd/cadastrovisita.html
+++ b/frontEnd/cadastrovisita.html
@@ -14,7 +14,8 @@
 
         <title>Controle de Visitantes - Registro</title>
 </head>
-<body onload="checkAuth()">
+<!--<body onload="checkAuth()">-->
+<body>
         <nav>
             <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
             <ul class="links">
