--- a/frontEnd/dashboard.html
+++ b/frontEnd/dashboard.html
@@ -32,6 +32,7 @@
     <div id="lineChartVisitasHora"></div>
 </body>
     <script type="text/javascript" src="js/styles.js"></script>
+    <script type="text/javascript" src="js/dashboard.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
 </html>
