adds Registrar button to JS logic

--- a/frontEnd/cadastrovisita.html
+++ b/frontEnd/cadastrovisita.html
@@ -151,7 +151,7 @@
                 </select>
             </div>
             <button id="pesquisarCPF" onclick="checkCpf()" class="button-primary">Pesquisar</button>
-            <button id="registrarVisita" onclick="registrar()" class="button-primary saveReg">Registrar Visitante</button>
+            <button id="registrarVisita" onclick="registrar()" id="cpf-true" class="button-primary saveReg">Registrar Visitante</button>
             <script type="text/javascript" src="js/common.js"></script>
             <script type="text/javascript" src="js/cadastrarVisita.js"></script>
         </div>
