--- a/frontEnd/cadastrovisita.html
+++ b/frontEnd/cadastrovisita.html
@@ -34,9 +34,9 @@
                 <h6>Nome</h6>
                 <p id="info"></p><!--Nome vem do back-->
             </div>
-            <div class="veiculos item">
-                <h6 id="cpf-true1">Veículos</h6>
-                <select id="veiculos" id="cpf-true2" onChange="toggleVeiculoNovo()">
+            <div class="veiculos item" id="cpf-true1">
+                <h6>Veículos</h6>
+                <select id="veiculos" onChange="toggleVeiculoNovo()">
                     <option disabled selected value> -- Selecione uma opção -- </option>
                     <option value="novo-carro">Novo</option>
                 </select>
@@ -51,8 +51,8 @@
                     <input type="text" placeholder="2005" id="ano">
                 </div>
             </div>
-            <div class="setores item">
-                <h6 id="cpf-true3">Setores</h6>
+            <div class="setores item" id="cpf-true3">
+                <h6 id="tituloSetor">Setores</h6>
                 <select id="predios" id="cpf-true4" onChange="toggleSetores()">
                     <option disabled selected value> -- Selecione uma opção -- </option>
                     <option value="predio-A">Prédio A</option>
