--- a/frontEnd/historicoVisitas.html
+++ b/frontEnd/historicoVisitas.html
@@ -14,7 +14,8 @@
     
     <title>Controle de Visitantes - Histórico</title>
 </head>
-<body onload="load()">
+<!--<body onload="load()">-->
+<body>
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
@@ -27,7 +28,7 @@
         <div class="center-them">
             <a class="help" href="dashboard.html"><button id="dashboard" class="button-primary left-button">Dashboard</button></a>
         </div>
-        <table class="tabelaHistorico">
+        <table class="tabelaHistorico" id="tabelaHistorico">
             <thead>
                 <tr>
                     <th>Nome</th>
