--- a/frontEnd/cadastrousuario.html
+++ b/frontEnd/cadastrousuario.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,14 +14,15 @@
     
     <title>Controle de Visitantes - Histórico</title>
 </head>
-<!--<body onload="checkAuth()">-->
-<body>
+<body onload="checkAuth()">
+<!--<body>-->
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
-                <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico-->
-                <li><a href="cadastrovisita.html">Registrar Visitante</a></li><!--Registro Visitante-->
-                <li><a href="index.html">Sair</a></li><!--Sair-->
+            <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico-->
+            <li><a href="cadastrovisita.html">Registrar Visitante</a></li><!--Registro Visitante-->
+            <li><a href="cadastrousuario.html">Registrar Usuario</a></li><!--Registro Usuario-->
+            <li><a href="index.html">Sair</a></li><!--Sair-->
         </ul>
     </nav>
     <h1>Controle de Usuários</h1>
