--- a/frontEnd/dashboard.html
+++ b/frontEnd/dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,13 +17,14 @@
     <title>Controle de Visitantes - Dashboard</title>
 </head>
 
-<body>
-<!--<body onload="checkAuth()">-->
+<!--<body>-->
+<body onload="load()">
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
             <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico-->
             <li><a href="cadastrovisita.html">Registrar Visitante</a></li><!--Registro Visitante-->
+            <li><a href="cadastrousuario.html">Registrar Usuario</a></li><!--Registro Usuario-->
             <li><a href="index.html">Sair</a></li><!--Sair-->
         </ul>
     </nav>
@@ -31,8 +32,8 @@
     <div id="pieChartVisitas"></div>
     <div id="lineChartVisitasHora"></div>
 </body>
-    <script type="text/javascript" src="js/styles.js"></script>
-    <script type="text/javascript" src="js/dashboard.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
+<script type="text/javascript" src="js/styles.js"></script>
+<script type="text/javascript" src="js/dashboard.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 </html>
