--- a/frontEnd/historicoVisitas.html
+++ b/frontEnd/historicoVisitas.html
@@ -14,21 +14,24 @@
     
     <title>Controle de Visitantes - Histórico</title>
 </head>
-<!--<body onload="load()">-->
-<body>
+<body onload="load()">
+<!--<body>-->
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
         <ul class="links">
             <li><a href="historicoVisitas.html">Histórico</a></li><!--Historico-->
             <li><a href="cadastrovisita.html">Registrar Visitante</a></li><!--Registro Visitante-->
+            <li><a href="cadastrousuario.html">Registrar Usuario</a></li><!--Registro Usuario-->
             <li><a href="index.html">Sair</a></li><!--Sair-->
         </ul>
     </nav>
     <h1>Histórico de Visitantes</h1>
         <div class="center-them">
             <a class="help" href="dashboard.html"><button id="dashboard" class="button-primary left-button">Dashboard</button></a>
+             <a class="help" href="cadastrovisita.html"><button id="cadastrovisita" class="button-primary left-button">Registrar Visitante</button></a>
         </div>
         <table class="tabelaHistorico" id="tabelaHistorico">
+       
             <thead>
                 <tr>
                     <th>Nome</th>
