--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,8 +15,8 @@
     
     <title>Controle de Visitantes - Entrar</title>
 </head>
-<!--<body onload="Logout()">-->
-<body>
+<body onload="Logout()">
+<!--<body>-->
     <nav>
         <div><img src="img/facens.png" alt="logo"><!--Logo--></div>
     </nav>
